# wiswesser

./: .gitignore  BarryWLNReturn.tsv  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  build.sh  chembl_false.tsv  configure  link.sh  wln-graph.dot  wln-minimal.dot
CodeBase/Parser/: CMakeLists.txt  parsefunctions.h  parser.cpp  readwln.cpp  southampton-wln.cpp  southampton-wln.h  wln-nextmove.cpp  wln-nextmove.h  writewln.cpp  writewln2.cpp  writewln3.cpp
CodeBase/Parser/src/: main.cpp  southampton_wln.cpp  wln_nextmove.cpp
CodeBase/Ring_Generator/: Compact_Benzene_Generation.ipynb  Gather_data.ipynb  Rdkit_WLN_Ring_Scipt.py  Reverse_Rings.ipynb  Ring_Cleaner.py  Rule_Made_Rings_Generator.ipynb
Deprecated/: writewln.cpp  writewln2.cpp
cmake/modules/: FindOpenBabel3.cmake
data/: chembl24.tsv  chembl_wln_only.txt  chemspider-wlns.tsv  chemspider.tsv  chemspider_wln_only.txt  pipe.txt  pubchem.tsv  pubchem_wln.txt  pubchem_wln_only.txt  smith.tsv  smith_wln.tsv  smith_wln.txt  smith_wln_only.txt
data/unit_test/: chembl24.tsv  smith.tsv  smith.txt
data/wln_only/: chembl24_wln_only.txt  chemspider_wln_only.txt.bz2  chemspider_wln_only.txt.lzma  pubchem_wln_only.txt.bz2  pubchem_wln_only.txt.lzma  pubchemfiltered.txt  ring_subset.txt  smallchembl.txt  smith_wln_only.txt
dep/: readwln.cpp
docs/: compress.md  convert.md  extract.md  generate.md
notes/: convert.md  reader_release.md  release.md  writer_release.md
scripts/: character_distributions.ipynb  duplicate_check.ipynb  locant_diagrams.ipynb  pubchem_build.ipynb  read_analysis.ipynb  retreive_chembl.ipynb
scripts/.ipynb_checkpoints/: pubchem_build-checkpoint.ipynb  read_analysis-checkpoint.ipynb
src/: benchwln.cpp  readline.h  readwln.cpp  testwln.cpp  wln-graph.dot  wln_api.h  wlnformat.cpp  wlngrep.cpp  wlnparser.h  wlnreader.cpp  wlnreader.cpp.old  wlnwriter.cpp  writewln.cpp  writewln2.cpp  writewln2.cpp.old
src/grammars/: WLN.g4  benzene_mult.g4  grammar_debug.txt  inchi.dot  locants.g4  multiplier.g4  smiles.dot  wln_fsm.g4
src/grammars/.antlr/: benzmultLexer.java  benzmultLexer.tokens  locants.interp  locantsLexer.interp  locantsLexer.java  locantsLexer.tokens  locantsParser.java  multiplier.interp  multiplierLexer.interp  multiplierLexer.java  multiplierParser.java
src/mwln/: writemwln.cpp
src/parser/: CMakeLists.txt  modernwln.cpp  obabel_strip.cpp  obabelcanonical.cpp  obcomp.cpp  parser.cpp  parser.h  reader.cpp  readwln2.cpp  wln-nextmove.cpp  writer.cpp  writewln.cpp  writewln2.cpp  writewln3.cpp
src/test/: chembl_test.sh  chemspider_test.sh  english_test.sh  pubchem_test.sh  read_test.sh  smith_test.sh  test.sh
src/wlnFP/: FPMetric.cpp  align.h  alignment.cpp  compareFP.cpp  fingerprint.h  wlnFP.cpp  wlndesc.cpp  wlnlingo.cpp  wlnseed.cpp
src/wlncluster/: fingerprint.h  wlnFP.cpp  wlncluster.cpp  wlndistance.cpp
src/wlncompress/: bitanalysis.cpp  compress.cpp  context_trie.cpp  ctree.h  dotzip.cpp  huffman.cpp  huffman.h  lempelz.cpp  lempelz.h  lz.cpp  lz.h  paq6.cpp  paq8.cpp  ppm.cpp  ppm.h  smizip.cpp  test.paq  test2.paq  wlnarithmetic.cpp  wlncompress.cpp  wlndeflate.cpp  wlnhuffman.cpp  wlnppm.cpp  wlntrain.cpp  wlnzip.cpp  wlnzip.h
src/wlngen/: descriptor.h  wlngen.cpp  wlnlearn.cpp  wlnlearn2.cpp  wlntrain.cpp
src/wlngrep/: rconvert.h  read_file.h  readdot.h  rfsm.h  rmerge.h  rminimise.h  rtransitions.h  wlndfa.h  wlngrep.cpp  wlnmatch.h
src/wlnparser/: benchwln.cpp  modernwln.cpp  obcomp.cpp  parser.h  reader.cpp  readwln.cpp  readwln2.cpp  wln-nextmove.cpp  wlnFT.cpp  wln_api.hh  wlnformat.cpp  wlnparser.h  wlnreader.cpp  wlnshort.cpp  writer.cpp  writewln2.cpp
src/wlnsimilar/: fingerprint.h  similarity.cpp  wlncluster.cpp  wlndesc.cpp  wlndistance.cpp
test/: aqualsolwln.txt  canonical.sh  chembl_test.sh  chemspider_test.sh  compare.sh  english_test.sh  errors.txt  file.sh  pubchem_test.sh  read_test.sh  reading.sh  readwln_catch2.cpp  smith.tsv  smith_test.sh  wln-graph.dot  wln_only.txt  writing.sh
test/grep_tests/: paper_test.html  paper_test.txt
test/read_tests/: chembl_read_test.sh  chemspider_read_test.sh  english_read_test.sh  pubchem_read_test.sh  smith_read_test.sh
test/score_tests/: chemspider_score_test.sh  compare.sh  missed.tsv  pubchem_score_test.sh  wrong.tsv
test/write_tests/: chembl_write_test.sh  smith_write_test.sh
